# nidana-app

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  conversation_history_schema.sql  env-example  health_monitor_schema.sql  lifestyle_tracker_schema.sql  main.py  pyproject.toml  server.py  supabase_schema.sql  vital_logs_schema.sql
backend/routes/chatbot/: router.py  schemas.py
backend/routes/conversation_history/: __init__.py  router.py  schemas.py
backend/routes/health_monitor/: __init__.py  router.py  schemas.py
backend/routes/lifestyle_tracker/: __init__.py  router.py  schemas.py
backend/routes/vital_logs/: __init__.py  router.py  schemas.py
backend/services/chatbot/: agents.py  analysis.py  config.py  report_extractor.py  report_persister.py  tasks.py  utils.py
backend/services/supabase/: __init__.py  client.py
frontend/: DESIGN.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: scroll-area.tsx
frontend/src/pages/: AuthPage.tsx  ChatbotPage.tsx  ConversationhistoryPage.tsx  HealthHistory.tsx  HealthMonitor.tsx  LifestyleTrackerPage.tsx  PersonalInfoPage.tsx  RegistrationPage.tsx  SignInPage.tsx  VitalLogsPage.tsx  WomenHealthPage.tsx
sources/: Nidana-Health-Companion.pptx
