[project]
name = "nidana-server"
version = "0.1.0"
description = "AI Healthcare App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[litellm]>=1.14.3",
    "fastapi>=0.136.1",
    "img2pdf>=0.6.3",
    "langchain>=1.2.17",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
